# sodium

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  PLAN.md  README.md  SPEC.md
examples/: main.na
include/sodium/nac/: main.h  nac.h
include/sodium/nac/ast/: ast.h  ast_node.h  ast_printer.h  ast_visitor.h  decl.h  expr.h  identifier.h  parameter_list.h  source_file.h  stmt.h  type.h
include/sodium/nac/basic/: file.h  source_location.h  source_range.h
include/sodium/nac/codegen/: codegen.h  codegen_diagnostics.h  codegen_visitor.h  target.h
include/sodium/nac/diagnostics/: diagnostic.h  diagnostic_engine.h  error.h  fatal_error.h
include/sodium/nac/error/: error.h
include/sodium/nac/errors/: error.h  error_manager.h  lexer_error.h  parser_error.h
include/sodium/nac/exceptions/: exception.h  io_exception.h  lexer_exception.h
include/sodium/nac/io/: file.h  file_io.h  file_reader.h
include/sodium/nac/lexer/: lexer.h  lexer_diagnostics.h  token.h
include/sodium/nac/parser/: parser.h  parser_diagnostics.h
include/sodium/nac/token/: token.h  token_buffer.h  token_cursor.h  token_kind.h
include/sodium/nac/util/: file_reader.h  string_formatter.h
nac/: Cargo.toml
nac/arena/src/: lib.rs
nac/ast/: Cargo.toml
nac/ast/src/: decl.rs  expr.rs  lib.rs  print.rs  printer.rs  stmt.rs  ty.rs  visitor.rs
nac/codegen/: Cargo.toml
nac/codegen/src/: diagnostics.rs  lib.rs
nac/context/: Cargo.toml
nac/context/src/: lib.rs
nac/data_structures/: Cargo.toml
nac/data_structures/src/intern/: map.rs  mod.rs
nac/driver/: Cargo.toml
nac/driver/src/: compiler.rs  lib.rs
nac/errors/: Cargo.toml
nac/errors/src/: diagnostic.rs  diagnostic_handler.rs  lib.rs
nac/ir/: Cargo.toml
nac/ir/src/: decl.rs  expr.rs  lib.rs  print.rs  stmt.rs
nac/lexer/: Cargo.toml
nac/lexer/src/: diagnostics.rs  lib.rs  tests.rs
nac/llvm/: Cargo.toml
nac/llvm/src/: basic_block.rs  builder.rs  context.rs  diagnostics.rs  lib.rs  module.rs  target.rs  types.rs  values.rs
nac/main/: Cargo.toml
nac/main/src/: main.rs
nac/parser/: Cargo.toml
nac/parser/src/: decl.rs  diagnostics.rs  expr.rs  lib.rs  stmt.rs  ty.rs
nac/parser/src/tests/: decl.rs  expr.rs  macros.rs  mod.rs  stmt.rs
nac/range/src/: lib.rs
nac/sema/: Cargo.toml
nac/sema/src/: diagnostics.rs  inference.rs  lib.rs
nac/sema/src/ir/: decl.rs  expr.rs  mod.rs  print.rs  stmt.rs
nac/sema/src/lower/: decl.rs  expr.rs  mod.rs  stmt.rs
nac/sema/src/ty/: context.rs  intern.rs  mod.rs
nac/sema/src/type_check/: diagnostics.rs  inference.rs  mod.rs
nac/session/: Cargo.toml
nac/session/src/: lib.rs
nac/source/: Cargo.toml
nac/source/src/: file.rs  lib.rs  tests.rs
nac/src/: lib.rs  main.rs
nac/src/ast/: decl.rs  expr.rs  mod.rs  printer.rs  stmt.rs  ty.rs  visitor.rs
nac/src/basic/: mod.rs  source_cursor.rs  source_file.rs  source_location.rs  source_range.rs
nac/src/codegen/: diagnostics.rs  mod.rs  tests.rs
nac/src/driver/: driver.rs  mod.rs
nac/src/errors/: diagnostic.rs  diagnostic_handler.rs  mod.rs
nac/src/lexer/: diagnostics.rs  lexer.rs  mod.rs  tests.rs
nac/src/llvm/: basic_block.rs  builder.rs  context.rs  core.rs  diagnostics.rs  mod.rs  module.rs  target.rs  types.rs  values.rs
nac/src/parser/: decl.rs  diagnostics.rs  expr.rs  mod.rs  stmt.rs  ty.rs
nac/src/parser/tests/: decl.rs  expr.rs  macros.rs  mod.rs  stmt.rs
nac/src/session/: mod.rs
nac/src/source/: cursor.rs  file.rs  mod.rs  range.rs  tests.rs
nac/src/token/: cursor.rs  mod.rs  token.rs  token_cursor.rs  token_stream.rs
nac/src/util/: file_reader.rs  mod.rs
nac/symbol/: Cargo.toml
nac/symbol/src/: intern.rs  lib.rs
nac/token/: Cargo.toml
nac/token/src/: cursor.rs  lib.rs  token_stream.rs
nac/ty/src/: context.rs  lib.rs
src/: CMakeLists.txt
src/nac/: main.cpp  nac.cpp
src/nac/ast/: CMakeLists.txt  ast.cpp  ast_node.cpp  ast_printer.cpp  decl.cpp  expr.cpp  identifier.cpp  parameter_list.cpp  source_file.cpp  stmt.cpp  type.cpp
src/nac/basic/: CMakeLists.txt  file.cpp  source_location.cpp  source_range.cpp
src/nac/codegen/: CMakeLists.txt  codegen.cpp  codegen_diagnostics.cpp  target.cpp
src/nac/diagnostics/: CMakeLists.txt  diagnostic.cpp  diagnostic_engine.cpp  error.cpp  fatal_error.cpp
src/nac/error/: error.cpp
src/nac/errors/: CMakeLists.txt  error.cpp  error_manager.cpp  lexer_error.cpp  parser_error.cpp
src/nac/exceptions/: CMakeLists.txt  exception.cpp  io_exception.cpp  lexer_exception.cpp
src/nac/io/: CMakeLists.txt  file.cpp  file_io.cpp  file_reader.cpp
src/nac/lexer/: CMakeLists.txt  lexer.cpp  lexer_diagnostics.cpp  token.cpp
src/nac/parser/: CMakeLists.txt  parse_decl.cpp  parse_expr.cpp  parse_stmt.cpp  parser.cpp  parser_diagnostics.cpp
src/nac/token/: CMakeLists.txt  token.cpp  token_buffer.cpp  token_cursor.cpp
src/nac/util/: CMakeLists.txt  file_reader.cpp
tests/: CMakeLists.txt
tests/nac/: main_test.cpp
tests/nac/io/: CMakeLists.txt  file_io_test.cpp  file_reader_test.cpp
tests/nac/lexer/: CMakeLists.txt  lexer_test.cpp
tests/nac/parser/: CMakeLists.txt  parse_decl_test.cpp  parse_expr_test.cpp  parse_stmt_test.cpp  parser_test.cpp
tests/nac/util/: CMakeLists.txt  file_reader_test.cpp  string_formatter_test.cpp
