[package]
name = "driver"
version = "0.1.0"
edition = "2021"

[dependencies]
codegen = { path = "../codegen" }
context = { path = "../context" }
errors = { path = "../errors" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
sema = { path = "../sema" }
session = { path = "../session" }
source = { path = "../source" }
target = { path = "../target" }
